--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -9,7 +9,7 @@
 }
 
 #app {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 :root {
@@ -53,30 +53,5 @@
     width: 100%;
     height: 100%;
     padding-left: 60px;
-  }
-}
-
-.btn {
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-
-  width: 100%;
-  height: 50px;
-
-  transition: all 0.2s ease;
-
-  &__primary {
-    background: var(--color-blue);
-    color: white;
-
-    &:hover {
-      background: rgba(126, 14, 218, 0.7);
-    }
-  }
-
-  &__icon {
-
   }
 }
