--- a/src/shared/styles/auth.scss
+++ b/src/shared/styles/auth.scss
@@ -1,3 +1,11 @@
+.page{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .titleApp {
   display: flex;
   flex-direction: column;
@@ -18,7 +26,6 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
-  max-width: 345px;
   width: 100%;
 
   &__title{
