--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+/* Order */
+@layer reset, primevue;
+
+/* Reset CSS */
+@layer reset {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+  }
 }
 
 #app {
@@ -55,4 +61,10 @@
     height: 100%;
     padding-left: 60px;
   }
+}
+
+.blue-title {
+  font-size: 18px;
+  color: var(--color-blue);
+  font-weight: 600;
 }
